--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 body {
@@ -9,81 +8,189 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.main {
-  width: 80vw;
+@media (orientation: portrait){
+  
+  #titulo {
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    font-size: 8vw;
+    margin-bottom: 1vw;
+  }
+
+  #caja {
+    background-color: white;
+    border-radius: 0.5vw;
+    text-align: center;
+    width: 90vw;
+    height: 100%;
+    margin-bottom: 12vw;
+  }
+
+  #textTarea {
+    border-radius: 0.5vw;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    display: block;
+    width: 80vw;
+    height: 27vh;
+    resize: none;
+    font-size: 4vw;
+    margin-bottom: 10vw;
+    position: relative;
+    top: 5vw;  
+  }
+
+  .btn {
+    border: 0;
+    color: white;
+    background-color: blue;
+    font-weight: bold;
+    width: 30vw;
+    height: 10vw;
+    font-size: 4vw;
+    border-radius: 0.5vw;
+    margin-left: 1vw;
+    
+  }
+
+  #titulo_2 {
+    position: relative;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    font-size: 6vw;
+    bottom: 11vw;
+  }
+
+  #caja_2 {
+    background-color: white;
+    border-radius: 0.5vw;
+    text-align: center;
+    width: 90vw;
+    height: 100%;
+  }
+
+  #textTarea_2 {
+    border-radius: 0.5vw;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    display: block;
+    width: 80vw;
+    height: 27vh;
+    resize: none;
+    font-size: 4vw;
+    margin-bottom: 3vw;
+    margin-top: -3vw;
+  }
+
+  .btn1 {
+    border: 0;
+    color: white;
+    background-color: rgb(233, 1, 1);
+    font-weight: bold;
+    width: 30vw;
+    height: 10vw;
+    font-size: 4vw;
+    border-radius: 0.5vw;
+    margin-top: 2vw;
+    margin-bottom: 4.5vw;
+    margin-left: 1vw;
+  }
+
+}
+
+@media (orientation: landscape){
+
+  .main {
+  width: 85vw;
   margin: auto;
   display: flex;
   justify-content: center;
-}
-
-.titulo {
-  padding: 15px;
-  width: 100vw;
-  margin: auto;
-  text-align: center;
-  color: 0;
-}
-
-.box {
-  padding: 10px;
-  margin: auto;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  border-radius: 1em;
-  width: 30vw;
-  height: 8vw;
-}
-
-.btn {
-  border: 0;
-  color: white;
-  font-weight: bold;
-  background-color: blue;
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 1.2em;
-}
-
-.btn1 {
-  border: 0;
-  color: white;
-  font-weight: bold;
-  background-color: rgb(233, 1, 1);
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 1.2em;
-}
-
-.text-input {
-  border-radius: 0.5em;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  display: block;
-  padding: 0.5em;
-  width: 100%;
-  height: 50px;
-}
-
-#input {
-  position: relative;
-  top: 22%;
-}
-
-#encriptar {
-  position: relative;
-  top: 22%;
+  }
+  
+  #titulo {
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    font-size: 3vw;
+    margin-bottom: 1vw;
   }
 
-  #desencriptar {
-  position: relative;
-  top: 22%;
+  #caja {
+    background-color: white;
+    border-radius: 0.5vw;
+    text-align: center;
+    width: 40vw;
+    height: 100%;
+    margin-top: 3vw;
   }
 
-  #pegar {
-  position: relative;
-  top: 22%;
+  #textTarea {
+    border-radius: 0.5vw;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    display: block;
+    width: 38vw;
+    height: 70vh;
+    resize: none;
+    font-size: 1vw;
+    margin: 1vw;
   }
 
-  #borrar {
-  position: relative;
-  top: 22%;
+  .btn {
+    border: 0;
+    color: white;
+    background-color: blue;
+    font-weight: bold;
+    width: 8vw;
+    height: 3vw;
+    font-size: 1vw;
+    border-radius: 0.5vw;
+    margin-bottom: 1vw;
   }
+
+  #titulo_2 {
+    position: relative;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    font-size: 2vw;
+    bottom: 3vw;
+  }
+
+  #caja_2 {
+    background-color: white;
+    border-radius: 0.5vw;
+    text-align: center;
+    width: 40vw;
+    height: 100%;
+    margin-top: 3vw;
+  }
+
+  #textTarea_2 {
+    border-radius: 0.5vw;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    display: block;
+    width: 38vw;
+    height: 70vh;
+    resize: none;
+    font-size: 1vw;
+    margin: 1vw;
+    margin-top: -1.4vw;
+  }
+
+  .btn1 {
+    border: 0;
+    color: white;
+    background-color: rgb(233, 1, 1);
+    font-weight: bold;
+    width: 8vw;
+    height: 3vw;
+    font-size: 1vw;
+    border-radius: 0.5vw;
+    margin-bottom: 1vw;
+  }
+
+}
